Permitir nome personalizado no perfil empresarial
